--- a/prj/install
+++ b/prj/install
@@ -1,6 +1,7 @@
 #!/bin/ksh
 
-echo "This will give 711 permission to your home directory, are you sure?(Y/N)"
+echo "Please do not install this untill this message is removed, ENTER (n) to exit:"
+#echo "This will give 711 permission to your home directory, are you sure?(Y/N)"
 read resp
 if [ $resp == Y ] || [ $resp == y ]; then
   echo "please wait, compiling"
@@ -10,6 +11,8 @@ if [ $resp == Y ] || [ $resp == y ]; then
   chmod 711 ~/submit
   chmod 755 ~/activate
   echo "Permissions set"
+  sed -i "s|<uid>|`whoami`|g" "~/activate"
+  echo "User id set to `whoami` in activate"
   echo "installation complete"
 else
   echo "aborted"
