--- a/prj/install
+++ b/prj/install
@@ -1,7 +1,7 @@
 #!/bin/ksh
 
-echo "Please do not install this untill this messege is removed, ENTER (n) to exit:"
-#echo "This will give 711 permission to your home directory, are you sure?(Y/N)"
+#echo "Please do not install this untill this messege is removed, ENTER (n) to exit:"
+echo "This will give 711 permission to your home directory, are you sure?(Y/N)"
 read resp
 if [ $resp == Y ] || [ $resp == y ]; then
   echo "please wait, compiling"
